Page MenuHome GnuPG

Kleopatra: Make "Loading certificate cache..." busy indicator accessible
Testing, NormalPublic

Description

When Kleopatra is started then the toolbar has the keyboard focus until the certificates have been loaded. Users using assistive technology may not be aware that Kleopatra is busy. We need to make the "Loading certificate cache..." busy indicator accessible.

Event Timeline

ikloecker created this task.
ikloecker changed the task status from Open to Testing.Nov 18 2025, 4:13 PM
ikloecker moved this task from Backlog to WIP on the gpd5x board.
timegrid added a subscriber: timegrid.

Looks good to me on gpg4win-5.0.0-beta413 @ win11

kleopatra  window
Loading certificate cache...
tab
Main Toolbar  tool bar
Sign/Encrypt  button  Encrypt and/or sign files  Alt+  y
shift+tab
Loading certificate cache...