Focus "Loading certificate cache..." overlay while it's shown

This ensures that screen readers speak the overlay text. This change
also makes the text of the progress overlay used when loading certificates
from a smartcard accessible (via the Tab key), but it's not focused
automatically.

GnuPG-bug-id: 7935